--- a/src/templates/blocks/create-event.html
+++ b/src/templates/blocks/create-event.html
@@ -98,6 +98,7 @@
                 </label>
                 <div class="create-event__form-select">
                     <select name="role" class="js-custom-select">
+                        <option value="">Выберите лектора</option>
                         <option value="1">Петров А.А.</option>
                         <option value="2">2</option>
                         <option value="3">3</option>
@@ -144,7 +145,9 @@
                                 <div class="create-event__lectors-card-panel-item">
                                     <div class="create-event__lectors-select">
                                         <select name="role" class="js-custom-select">
+                                            <option value="">Выберите лектора</option>
                                             <option value="1">Петров А.А.</option>
+                                            <option value="1">Петров Алесандр Петрович</option>
                                             <option value="2">2</option>
                                             <option value="3">3</option>
                                         </select>
