--- a/src/scss/_filters.scss
+++ b/src/scss/_filters.scss
@@ -77,6 +77,7 @@
 
     .choices__list--dropdown .choices__list {
         max-height: 20rem;
+        overflow-x: hidden;
     }
 
     .choices__list--dropdown .choices__item {
