--- a/src/templates/blocks/create-event.html
+++ b/src/templates/blocks/create-event.html
@@ -21,6 +21,34 @@
                         <option value="1">Казань</option>
                         <option value="2">2</option>
                         <option value="3">3</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
                     </select>
                 </div>
             </div>
@@ -100,6 +128,52 @@
                     <select name="role" class="js-custom-select">
                         <option value="">Выберите лектора</option>
                         <option value="1">Петров А.А.</option>
+                        <option value="1">Петров А.А.</option>
+                        <option value="1">Петров А.А.</option>
+                        <option value="1">Петров А.А.</option>
+                        <option value="1">Петров А.А.</option>
+                        <option value="1">Петров А.А.</option>
+                        <option value="1">Петров А.А.</option>
+                        <option value="1">Петров А.А.</option>
+                        <option value="1">Петров А.А.</option>
+                        <option value="1">Петров А.А.</option>
+                        <option value="1">Петров А.А.</option>
+                        <option value="1">Петров А.А.</option>
+                        <option value="1">Петров А.А.</option>
+                        <option value="1">Петров А.А.</option>
+                        <option value="1">Петров А.А.</option>
+                        <option value="1">Петров А.А.</option>
+                        <option value="1">Петров А.А.</option>
+                        <option value="1">Петров А.А.</option>
+                        <option value="1">Петров А.А.</option>
+                        <option value="1">Петров А.А.</option>
+                        <option value="1">Петров А.А.</option>
+                        <option value="1">Петров А.А.</option>
+                        <option value="1">Петров А.А.</option>
+                        <option value="1">Петров А.А.</option>
+                        <option value="1">Петров А.А.</option>
+                        <option value="1">Петров А.А.</option>
+                        <option value="1">Петров А.А.</option>
+                        <option value="1">Петров А.А.</option>
+                        <option value="1">Петров А.А.</option>
+                        <option value="1">Петров А.А.</option>
+                        <option value="1">Петров А.А.</option>
+                        <option value="1">Петров А.А.</option>
+                        <option value="1">Петров А.А.</option>
+                        <option value="1">Петров А.А.</option>
+                        <option value="1">Петров А.А.</option>
+                        <option value="1">Петров А.А.</option>
+                        <option value="1">Петров А.А.</option>
+                        <option value="1">Петров А.А.</option>
+                        <option value="1">Петров А.А.</option>
+                        <option value="1">Петров А.А.</option>
+                        <option value="1">Петров А.А.</option>
+                        <option value="1">Петров А.А.</option>
+                        <option value="1">Петров А.А.</option>
+                        <option value="1">Петров А.А.</option>
+                        <option value="1">Петров А.А.</option>
+                        <option value="1">Петров А.А.</option>
+                        <option value="1">Петров А.А.</option>
                         <option value="2">2</option>
                         <option value="3">3</option>
                     </select>
@@ -146,6 +220,60 @@
                                     <div class="create-event__lectors-select">
                                         <select name="role" class="js-custom-select">
                                             <option value="">Выберите лектора</option>
+                                            <option value="1">Петров А.А.</option>
+                                            <option value="1">Петров Алесандр Петрович</option>
+                                            <option value="1">Петров А.А.</option>
+                                            <option value="1">Петров Алесандр Петрович</option>
+                                            <option value="1">Петров А.А.</option>
+                                            <option value="1">Петров Алесандр Петрович</option>
+                                            <option value="1">Петров А.А.</option>
+                                            <option value="1">Петров Алесандр Петрович</option>
+                                            <option value="1">Петров А.А.</option>
+                                            <option value="1">Петров Алесандр Петрович</option>
+                                            <option value="1">Петров А.А.</option>
+                                            <option value="1">Петров Алесандр Петрович</option>
+                                            <option value="1">Петров А.А.</option>
+                                            <option value="1">Петров Алесандр Петрович</option>
+                                            <option value="1">Петров А.А.</option>
+                                            <option value="1">Петров Алесандр Петрович</option>
+                                            <option value="1">Петров А.А.</option>
+                                            <option value="1">Петров Алесандр Петрович</option>
+                                            <option value="1">Петров А.А.</option>
+                                            <option value="1">Петров Алесандр Петрович</option>
+                                            <option value="1">Петров А.А.</option>
+                                            <option value="1">Петров Алесандр Петрович</option>
+                                            <option value="1">Петров А.А.</option>
+                                            <option value="1">Петров Алесандр Петрович</option>
+                                            <option value="1">Петров А.А.</option>
+                                            <option value="1">Петров Алесандр Петрович</option>
+                                            <option value="1">Петров А.А.</option>
+                                            <option value="1">Петров Алесандр Петрович</option>
+                                            <option value="1">Петров А.А.</option>
+                                            <option value="1">Петров Алесандр Петрович</option>
+                                            <option value="1">Петров А.А.</option>
+                                            <option value="1">Петров Алесандр Петрович</option>
+                                            <option value="1">Петров А.А.</option>
+                                            <option value="1">Петров Алесандр Петрович</option>
+                                            <option value="1">Петров А.А.</option>
+                                            <option value="1">Петров Алесандр Петрович</option>
+                                            <option value="1">Петров А.А.</option>
+                                            <option value="1">Петров Алесандр Петрович</option>
+                                            <option value="1">Петров А.А.</option>
+                                            <option value="1">Петров Алесандр Петрович</option>
+                                            <option value="1">Петров А.А.</option>
+                                            <option value="1">Петров Алесандр Петрович</option>
+                                            <option value="1">Петров А.А.</option>
+                                            <option value="1">Петров Алесандр Петрович</option>
+                                            <option value="1">Петров А.А.</option>
+                                            <option value="1">Петров Алесандр Петрович</option>
+                                            <option value="1">Петров А.А.</option>
+                                            <option value="1">Петров Алесандр Петрович</option>
+                                            <option value="1">Петров А.А.</option>
+                                            <option value="1">Петров Алесандр Петрович</option>
+                                            <option value="1">Петров А.А.</option>
+                                            <option value="1">Петров Алесандр Петрович</option>
+                                            <option value="1">Петров А.А.</option>
+                                            <option value="1">Петров Алесандр Петрович</option>
                                             <option value="1">Петров А.А.</option>
                                             <option value="1">Петров Алесандр Петрович</option>
                                             <option value="2">2</option>
