Фиксы + адаптив опроса + поиск в селектах

--- a/src/templates/blocks/all-accounts.html
+++ b/src/templates/blocks/all-accounts.html
@@ -359,7 +359,7 @@
         <div class="pagination__item-count">
             Строк на странице
             <div class="pagination__item-count-select">
-                <select name="offset" class="js-custom-select">
+                <select name="offset" class="js-custom-select" data-position-top>
                     <option value="10" selected>10</option>
                     <option value="9">9</option>
                     <option value="8">8</option>
