--- a/src/templates/blocks/create-event.html
+++ b/src/templates/blocks/create-event.html
@@ -17,7 +17,7 @@
                     Город
                 </label>
                 <div class="create-event__form-select">
-                    <select name="role" class="js-custom-select">
+                    <select name="role" class="js-custom-select" data-has-search>
                         <option value="1">Казань</option>
                         <option value="2">2</option>
                         <option value="3">3</option>
@@ -89,7 +89,7 @@
                     Формат
                 </label>
                 <div class="create-event__form-select">
-                    <select name="role" class="js-custom-select">
+                    <select name="role" class="js-custom-select" data-has-search>
                         <option value="1">Лекция</option>
                         <option value="2">2</option>
                         <option value="3">3</option>
@@ -101,7 +101,7 @@
                     Продукт
                 </label>
                 <div class="create-event__form-select">
-                    <select name="role" class="js-custom-select">
+                    <select name="role" class="js-custom-select" data-has-search>
                         <option value="1">Лекция</option>
                         <option value="2">2</option>
                         <option value="3">3</option>
@@ -125,7 +125,7 @@
                     Руководитель
                 </label>
                 <div class="create-event__form-select">
-                    <select name="role" class="js-custom-select">
+                    <select name="role" class="js-custom-select" data-has-search>
                         <option value="">Выберите лектора</option>
                         <option value="1">Петров А.А.</option>
                         <option value="1">Петров А.А.</option>
@@ -184,7 +184,7 @@
                     Планируемое количество участников
                 </label>
                 <div class="create-event__form-select">
-                    <select name="role" class="js-custom-select">
+                    <select name="role" class="js-custom-select" data-has-search>
                         <option value="1">1</option>
                         <option value="2">2</option>
                         <option value="3">3</option>
@@ -218,7 +218,7 @@
                                 </div>
                                 <div class="create-event__lectors-card-panel-item">
                                     <div class="create-event__lectors-select">
-                                        <select name="role" class="js-custom-select">
+                                        <select name="role" class="js-custom-select" data-has-search>
                                             <option value="">Выберите лектора</option>
                                             <option value="1">Петров А.А.</option>
                                             <option value="1">Петров Алесандр Петрович</option>
@@ -306,7 +306,7 @@
                                 </div>
                                 <div class="create-event__lectors-card-panel-item">
                                     <div class="create-event__lectors-select">
-                                        <select name="role" class="js-custom-select">
+                                        <select name="role" class="js-custom-select" data-has-search>
                                             <option value="1">Петров А.А.</option>
                                             <option value="2">2</option>
                                             <option value="3">3</option>
