--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -29,6 +29,11 @@
     .sidebar-collapsed & {
         padding-left: 10rem;
     }
+
+
+    @include breakpoint(mobile) {
+        padding-left: 0 !important;
+    }
 }
 
 
@@ -40,6 +45,7 @@
     top: 0;
     left: 0;
     height: 100%;
+    z-index: 40;
     .sidebar-collapsed & {
         width: 10rem;
     }
@@ -57,6 +63,12 @@
     padding-bottom: 2rem;
     flex-grow: 1;
     position: relative;
+
+    @include breakpoint(mobile) {
+        padding: 2rem;
+
+        padding-left: 12rem;
+    }
 }
 
 
